--- a/src/main/resources/patagonia/view/Barco_Catamaran.fxml
+++ b/src/main/resources/patagonia/view/Barco_Catamaran.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(to bottom, #009688, #004d40, #00251a);" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(to bottom, #009688, #004d40, #00251a);" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="patagonia.controller.BarcoWellboatController">
    <children>
-      <GridPane layoutX="123.0" layoutY="122.0" prefHeight="324.0" prefWidth="165.0" AnchorPane.bottomAnchor="154.0" AnchorPane.leftAnchor="123.0" AnchorPane.topAnchor="122.0">
+      <GridPane fx:id="gridAsientos" layoutX="123.0" layoutY="122.0" prefHeight="324.0" prefWidth="165.0" AnchorPane.bottomAnchor="154.0" AnchorPane.leftAnchor="123.0" AnchorPane.topAnchor="122.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="143.0" minWidth="10.0" prefWidth="54.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="138.0" minWidth="10.0" prefWidth="53.0" />
@@ -25,52 +25,52 @@
             <RowConstraints maxHeight="73.0" minHeight="0.0" prefHeight="73.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button alignment="CENTER" layoutX="10.0" layoutY="56.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="52.0" style="-fx-border-radius: 50; -fx-background-radius: 50; -fx-border-color: black; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="A10" textAlignment="JUSTIFY" GridPane.columnIndex="1" GridPane.rowIndex="4">
+            <Button alignment="CENTER" layoutX="10.0" layoutY="56.0" mnemonicParsing="false" onAction="#seleccionarUbicacion" prefHeight="50.0" prefWidth="52.0" style="-fx-border-radius: 50; -fx-background-radius: 50; -fx-border-color: black; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="A10" textAlignment="JUSTIFY" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <font>
                   <Font name="Tahoma Bold" size="11.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="50.0" prefWidth="52.0" style="-fx-border-radius: 50; -fx-background-radius: 50; -fx-border-color: black; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="A2" textAlignment="JUSTIFY" GridPane.columnIndex="1">
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#seleccionarUbicacion" prefHeight="50.0" prefWidth="52.0" style="-fx-border-radius: 50; -fx-background-radius: 50; -fx-border-color: black; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="A2" textAlignment="JUSTIFY" GridPane.columnIndex="1">
                <font>
                   <Font name="Tahoma Bold" size="12.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="50.0" prefWidth="52.0" style="-fx-border-radius: 50; -fx-background-radius: 50; -fx-border-color: black; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="A3" textAlignment="JUSTIFY" GridPane.rowIndex="1">
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#seleccionarUbicacion" prefHeight="50.0" prefWidth="52.0" style="-fx-border-radius: 50; -fx-background-radius: 50; -fx-border-color: black; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="A3" textAlignment="JUSTIFY" GridPane.rowIndex="1">
                <font>
                   <Font name="Tahoma Bold" size="12.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="50.0" prefWidth="52.0" style="-fx-border-radius: 50; -fx-background-radius: 50; -fx-border-color: black; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="A5" textAlignment="JUSTIFY" GridPane.rowIndex="2">
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#seleccionarUbicacion" prefHeight="50.0" prefWidth="52.0" style="-fx-border-radius: 50; -fx-background-radius: 50; -fx-border-color: black; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="A5" textAlignment="JUSTIFY" GridPane.rowIndex="2">
                <font>
                   <Font name="Tahoma Bold" size="12.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="50.0" prefWidth="52.0" style="-fx-border-radius: 50; -fx-background-radius: 50; -fx-border-color: black; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="A4" textAlignment="JUSTIFY" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#seleccionarUbicacion" prefHeight="50.0" prefWidth="52.0" style="-fx-border-radius: 50; -fx-background-radius: 50; -fx-border-color: black; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="A4" textAlignment="JUSTIFY" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <font>
                   <Font name="Tahoma Bold" size="12.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="50.0" prefWidth="52.0" style="-fx-border-radius: 50; -fx-background-radius: 50; -fx-border-color: black; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="A6" textAlignment="JUSTIFY" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#seleccionarUbicacion" prefHeight="50.0" prefWidth="52.0" style="-fx-border-radius: 50; -fx-background-radius: 50; -fx-border-color: black; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="A6" textAlignment="JUSTIFY" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <font>
                   <Font name="Tahoma Bold" size="12.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="50.0" prefWidth="52.0" style="-fx-border-radius: 50; -fx-background-radius: 50; -fx-border-color: black; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="A7" textAlignment="JUSTIFY" GridPane.rowIndex="3">
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#seleccionarUbicacion" prefHeight="50.0" prefWidth="52.0" style="-fx-border-radius: 50; -fx-background-radius: 50; -fx-border-color: black; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="A7" textAlignment="JUSTIFY" GridPane.rowIndex="3">
                <font>
                   <Font name="Tahoma Bold" size="12.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="50.0" prefWidth="52.0" style="-fx-border-radius: 50; -fx-background-radius: 50; -fx-border-color: black; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="A9" textAlignment="JUSTIFY" GridPane.rowIndex="4">
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#seleccionarUbicacion" prefHeight="50.0" prefWidth="52.0" style="-fx-border-radius: 50; -fx-background-radius: 50; -fx-border-color: black; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="A9" textAlignment="JUSTIFY" GridPane.rowIndex="4">
                <font>
                   <Font name="Tahoma Bold" size="12.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="50.0" prefWidth="52.0" style="-fx-border-radius: 50; -fx-background-radius: 50; -fx-border-color: black; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="A8" textAlignment="JUSTIFY" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#seleccionarUbicacion" prefHeight="50.0" prefWidth="52.0" style="-fx-border-radius: 50; -fx-background-radius: 50; -fx-border-color: black; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="A8" textAlignment="JUSTIFY" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <font>
                   <Font name="Tahoma Bold" size="12.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="49.0" prefWidth="52.0" style="-fx-border-radius: 50; -fx-background-radius: 50; -fx-border-color: black; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="A1" textAlignment="JUSTIFY">
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#seleccionarUbicacion" prefHeight="49.0" prefWidth="52.0" style="-fx-border-radius: 50; -fx-background-radius: 50; -fx-border-color: black; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="A1" textAlignment="JUSTIFY">
                <font>
                   <Font name="Tahoma Bold" size="12.0" />
                </font>
@@ -82,7 +82,7 @@
             <Font name="Times New Roman Bold" size="18.0" />
          </font>
       </Label>
-      <GridPane layoutX="628.0" layoutY="122.0" prefHeight="324.0" prefWidth="165.0">
+      <GridPane fx:id="gridCamarotes" layoutX="628.0" layoutY="122.0" prefHeight="324.0" prefWidth="165.0">
         <columnConstraints>
           <ColumnConstraints maxWidth="85.0" minWidth="39.0" prefWidth="70.0" />
             <ColumnConstraints maxWidth="85.0" minWidth="21.0" prefWidth="24.0" />
@@ -96,52 +96,52 @@
             <RowConstraints maxHeight="121.0" minHeight="9.0" prefHeight="51.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button minHeight="40.0" minWidth="29.0" mnemonicParsing="false" prefHeight="61.0" prefWidth="43.0" style="-fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="C3" GridPane.rowIndex="1">
+            <Button minHeight="40.0" minWidth="29.0" mnemonicParsing="false" onAction="#seleccionarUbicacion" prefHeight="61.0" prefWidth="43.0" style="-fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="C3" GridPane.rowIndex="1">
                <font>
                   <Font name="Tahoma Bold" size="12.0" />
                </font>
             </Button>
-            <Button minHeight="40.0" minWidth="29.0" mnemonicParsing="false" prefHeight="61.0" prefWidth="43.0" style="-fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="C4" GridPane.columnIndex="2" GridPane.rowIndex="1">
+            <Button minHeight="40.0" minWidth="29.0" mnemonicParsing="false" onAction="#seleccionarUbicacion" prefHeight="61.0" prefWidth="43.0" style="-fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="C4" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <font>
                   <Font name="Tahoma Bold" size="12.0" />
                </font>
             </Button>
-            <Button minHeight="40.0" minWidth="29.0" mnemonicParsing="false" prefHeight="61.0" prefWidth="43.0" style="-fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="C7" GridPane.rowIndex="3">
+            <Button minHeight="40.0" minWidth="29.0" mnemonicParsing="false" onAction="#seleccionarUbicacion" prefHeight="61.0" prefWidth="43.0" style="-fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="C7" GridPane.rowIndex="3">
                <font>
                   <Font name="Tahoma Bold" size="12.0" />
                </font>
             </Button>
-            <Button minHeight="40.0" minWidth="29.0" mnemonicParsing="false" prefHeight="61.0" prefWidth="43.0" style="-fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="C6" GridPane.columnIndex="2" GridPane.rowIndex="2">
+            <Button minHeight="40.0" minWidth="29.0" mnemonicParsing="false" onAction="#seleccionarUbicacion" prefHeight="61.0" prefWidth="43.0" style="-fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="C6" GridPane.columnIndex="2" GridPane.rowIndex="2">
                <font>
                   <Font name="Tahoma Bold" size="12.0" />
                </font>
             </Button>
-            <Button minHeight="40.0" minWidth="29.0" mnemonicParsing="false" prefHeight="61.0" prefWidth="43.0" style="-fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="C5" GridPane.rowIndex="2">
+            <Button minHeight="40.0" minWidth="29.0" mnemonicParsing="false" onAction="#seleccionarUbicacion" prefHeight="61.0" prefWidth="43.0" style="-fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="C5" GridPane.rowIndex="2">
                <font>
                   <Font name="Tahoma Bold" size="12.0" />
                </font>
             </Button>
-            <Button minHeight="40.0" minWidth="29.0" mnemonicParsing="false" prefHeight="61.0" prefWidth="43.0" style="-fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="C10" GridPane.columnIndex="2" GridPane.rowIndex="4">
+            <Button minHeight="40.0" minWidth="29.0" mnemonicParsing="false" onAction="#seleccionarUbicacion" prefHeight="61.0" prefWidth="43.0" style="-fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="C10" GridPane.columnIndex="2" GridPane.rowIndex="4">
                <font>
                   <Font name="Tahoma Bold" size="11.0" />
                </font>
             </Button>
-            <Button minHeight="40.0" minWidth="29.0" mnemonicParsing="false" prefHeight="61.0" prefWidth="43.0" style="-fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="C9" GridPane.rowIndex="4">
+            <Button minHeight="40.0" minWidth="29.0" mnemonicParsing="false" onAction="#seleccionarUbicacion" prefHeight="61.0" prefWidth="43.0" style="-fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="C9" GridPane.rowIndex="4">
                <font>
                   <Font name="Tahoma Bold" size="12.0" />
                </font>
             </Button>
-            <Button minHeight="40.0" minWidth="29.0" mnemonicParsing="false" prefHeight="61.0" prefWidth="43.0" style="-fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="C8" GridPane.columnIndex="2" GridPane.rowIndex="3">
+            <Button minHeight="40.0" minWidth="29.0" mnemonicParsing="false" onAction="#seleccionarUbicacion" prefHeight="61.0" prefWidth="43.0" style="-fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="C8" GridPane.columnIndex="2" GridPane.rowIndex="3">
                <font>
                   <Font name="Tahoma Bold" size="12.0" />
                </font>
             </Button>
-            <Button minHeight="40.0" minWidth="29.0" mnemonicParsing="false" prefHeight="61.0" prefWidth="43.0" style="-fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="C1">
+            <Button minHeight="40.0" minWidth="29.0" mnemonicParsing="false" onAction="#seleccionarUbicacion" prefHeight="61.0" prefWidth="43.0" style="-fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="C1">
                <font>
                   <Font name="Tahoma Bold" size="12.0" />
                </font>
             </Button>
-            <Button minHeight="40.0" minWidth="29.0" mnemonicParsing="false" prefHeight="61.0" prefWidth="43.0" style="-fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="C2" GridPane.columnIndex="2">
+            <Button minHeight="40.0" minWidth="29.0" mnemonicParsing="false" onAction="#seleccionarUbicacion" prefHeight="61.0" prefWidth="43.0" style="-fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-background-color: #58CCA3;" text="C2" GridPane.columnIndex="2">
                <font>
                   <Font name="Tahoma Bold" size="12.0" />
                </font>
