--- a/src/main/resources/patagonia/view/MenuGerente.fxml
+++ b/src/main/resources/patagonia/view/MenuGerente.fxml
@@ -7,8 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(to bottom, #009688, #004d40, #00251a);" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(to bottom, #009688, #004d40, #00251a);" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="patagonia.controller.MenuGerenteController">
    <children>
       <Label alignment="CENTER" layoutX="326.0" layoutY="49.0" prefHeight="42.0" prefWidth="269.0" style="-fx-background-color: #a5d6a7; -fx-background-radius: 10; -fx-border-radius: 10; -fx-border-color: black; -fx-border-width: 2px;" text="Menú Gerente">
          <font>
@@ -18,7 +17,8 @@
             <DropShadow color="#00000080" />
          </effect>
       </Label>
-      <Button fx:id="btnViajePersonal1" layoutX="333.0" layoutY="142.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="255.0" style="-fx-background-color: #00d2a0; -fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-cursor: hand;" text="Resumen ventas">
+      
+      <Button fx:id="btnResumenVentas" layoutX="333.0" layoutY="142.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="255.0" style="-fx-background-color: #00d2a0; -fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-cursor: hand;" text="Resumen ventas">
          <font>
             <Font name="Tahoma Bold" size="18.0" />
          </font>
@@ -26,7 +26,8 @@
             <DropShadow color="#00000066" offsetY="3.0" />
          </effect>
       </Button>
-      <Button fx:id="btnViajePersonal11" ellipsisString="" layoutX="334.0" layoutY="217.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="255.0" style="-fx-background-color: #00d2a0; -fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-cursor: hand;" text="Programar viaje extraordinario" textAlignment="CENTER" wrapText="true">
+      
+      <Button fx:id="btnProgramarViaje" ellipsisString="" layoutX="334.0" layoutY="217.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="255.0" style="-fx-background-color: #00d2a0; -fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-cursor: hand;" text="Programar viaje extraordinario" textAlignment="CENTER" wrapText="true">
          <font>
             <Font name="Tahoma Bold" size="16.0" />
          </font>
@@ -34,7 +35,8 @@
             <DropShadow color="#00000066" offsetY="3.0" />
          </effect>
       </Button>
-      <Button fx:id="btnViajePersonal111" layoutX="334.0" layoutY="299.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="255.0" style="-fx-background-color: #00d2a0; -fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-cursor: hand;" text="Autorizar descuento">
+      
+      <Button fx:id="btnAutorizarDescuento" layoutX="334.0" layoutY="299.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="255.0" style="-fx-background-color: #00d2a0; -fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-cursor: hand;" text="Autorizar descuento">
          <font>
             <Font name="Tahoma Bold" size="18.0" />
          </font>
@@ -42,7 +44,8 @@
             <DropShadow color="#00000066" offsetY="3.0" />
          </effect>
       </Button>
-      <Button fx:id="btnVender" defaultButton="true" layoutX="390.0" layoutY="452.0" mnemonicParsing="false" onAction="#realizarVenta" prefHeight="54.0" prefWidth="143.0" style="-fx-background-color: black; -fx-text-fill: white; -fx-background-radius: 15; -fx-border-color: #66bb6a; -fx-border-radius: 15; -fx-border-width: 2;" text="Salir">
+      
+      <Button fx:id="btnSalir" defaultButton="true" layoutX="390.0" layoutY="452.0" mnemonicParsing="false" onAction="#cerrarSesion" prefHeight="54.0" prefWidth="143.0" style="-fx-background-color: black; -fx-text-fill: white; -fx-background-radius: 15; -fx-border-color: #66bb6a; -fx-border-radius: 15; -fx-border-width: 2;" text="Salir">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
