--- a/src/main/resources/patagonia/view/AutorizarDescuento.fxml
+++ b/src/main/resources/patagonia/view/AutorizarDescuento.fxml
@@ -8,7 +8,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(to bottom, #009688, #004d40, #00251a);" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="patagonia.controller.SeguimientoController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(to bottom, #009688, #004d40, #00251a);"
+xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="patagonia.controller.AutorizarDescuentoController">
    <children>
       <Label text="" />
       <TextField fx:id="txtNombre" layoutX="51.0" layoutY="80.0" prefHeight="50.0" prefWidth="350.0" promptText="Ingrese nombre del cliente" style="-fx-background-color: white; -fx-border-color: black; -fx-border-width: 2px; -fx-border-radius: 8; -fx-background-radius: 8;">
@@ -21,12 +22,12 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </TextField>
-      <TextField fx:id="txtTarifa" alignment="CENTER" editable="false" layoutX="171.0" layoutY="205.0" prefHeight="50.0" prefWidth="230.0" promptText="Valor" style="-fx-background-color: white; -fx-border-color: black; -fx-border-width: 2px; -fx-border-radius: 8; -fx-background-radius: 8;">
+      <TextField fx:id="txtTarifa" alignment="CENTER" editable="false" layoutX="171.0" layoutY="205.0" prefHeight="50.0" prefWidth="230.0" promptText="Valor" style="-fx-background-color: white;-fx-border-color: black; -fx-border-width: 2px; -fx-border-radius: 8; -fx-background-radius: 8;">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </TextField>
-      <TextField fx:id="txtTotal" alignment="CENTER" editable="false" layoutX="506.0" layoutY="205.0" prefHeight="50.0" prefWidth="230.0" promptText="Ingrese descuento" style="-fx-background-color: white; -fx-border-color: black; -fx-border-width: 2px; -fx-border-radius: 5; -fx-background-radius: 5;">
+      <TextField fx:id="txtTotal" alignment="CENTER" editable="false" layoutX="506.0" layoutY="205.0" prefHeight="50.0" prefWidth="230.0" promptText="Ingrese descuento" style="-fx-background-color: white;-fx-border-color: black; -fx-border-width: 2px; -fx-border-radius: 5; -fx-background-radius: 5;">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
