--- a/src/main/resources/patagonia/view/MenuAsistente.fxml
+++ b/src/main/resources/patagonia/view/MenuAsistente.fxml
@@ -7,10 +7,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(to bottom, #009688, #004d40, #00251a);" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="patagonia.controller.MenuAsistenteController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(to bottom, #2c3e50, #000000);"
+xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="patagonia.controller.MenuAsistenteController">
    <children>
-
-      <Label alignment="CENTER" layoutX="316.0" layoutY="39.0" prefHeight="42.0" prefWidth="269.0" style="-fx-background-color: #a5d6a7; -fx-background-radius: 10; -fx-border-radius: 10; -fx-border-color: black; -fx-border-width: 2px;" text="Menú Asistente">
+      <Label alignment="CENTER" layoutX="326.0" layoutY="49.0" prefHeight="42.0" prefWidth="269.0" style="-fx-background-color: #a5d6a7; -fx-background-radius: 10; -fx-border-radius: 10; -fx-border-color: black; -fx-border-width: 2px;"
+      text="Menú Asistente">
          <font>
             <Font name="Times New Roman Bold" size="24.0" />
          </font>
@@ -19,7 +20,7 @@
          </effect>
       </Label>
       
-      <Button fx:id="btnViajePersonal" layoutX="323.0" layoutY="132.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="255.0" style="-fx-background-color: #00d2a0; -fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-cursor: hand;" text="Viaje personal">
+      <Button fx:id="btnViajePersonal" layoutX="333.0" layoutY="142.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="255.0" style="-fx-background-color: #00d2a0; -fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-cursor: hand;" text="Venta de Pasajes">
          <font>
             <Font name="Tahoma Bold" size="18.0" />
          </font>
@@ -28,7 +29,8 @@
          </effect>
       </Button>
       
-      <Button fx:id="btnEncomiendas" layoutX="324.0" layoutY="207.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="255.0" style="-fx-background-color: #00d2a0; -fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-cursor: hand;" text="Encomiendas">
+      <Button fx:id="btnEncomiendas" layoutX="334.0" layoutY="217.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="255.0" style="-fx-background-color: #00d2a0; -fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-cursor: hand;"
+      text="Encomiendas" textAlignment="CENTER">
          <font>
             <Font name="Tahoma Bold" size="18.0" />
          </font>
@@ -37,7 +39,7 @@
          </effect>
       </Button>
       
-      <Button fx:id="btnExcepciones" layoutX="324.0" layoutY="289.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="255.0" style="-fx-background-color: #00d2a0; -fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-cursor: hand;" text="Excepciones">
+      <Button fx:id="btnExcepciones" layoutX="334.0" layoutY="299.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="255.0" style="-fx-background-color: #00d2a0; -fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-cursor: hand;" text="Excepciones">
          <font>
             <Font name="Tahoma Bold" size="18.0" />
          </font>
@@ -46,7 +48,9 @@
          </effect>
       </Button>
       
-      <Button fx:id="btnSalir" defaultButton="true" layoutX="380.0" layoutY="442.0" mnemonicParsing="false" onAction="#cerrarSesion" prefHeight="54.0" prefWidth="143.0" style="-fx-background-color: black; -fx-text-fill: white; -fx-background-radius: 15; -fx-border-color: #66bb6a; -fx-border-radius: 15; -fx-border-width: 2;" text="Salir">
+      <Button fx:id="btnSalir" defaultButton="true" layoutX="390.0" layoutY="452.0" 
+      mnemonicParsing="false" onAction="#cerrarSesion" prefHeight="54.0" prefWidth="143.0" style="-fx-background-color: black; -fx-text-fill: white; -fx-background-radius: 15; -fx-border-color: #66bb6a; -fx-border-radius: 15; -fx-border-width: 2;"
+      text="Cerrar Sesión">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
@@ -57,6 +61,5 @@
             <DropShadow color="#000000" height="10.0" radius="4.5" width="10.0" />
          </effect>
       </Button>
-
    </children>
 </AnchorPane>
