--- a/src/main/resources/patagonia/view/MenuGerente.fxml
+++ b/src/main/resources/patagonia/view/MenuGerente.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(to bottom, #009688, #004d40, #00251a);" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="patagonia.controller.MenuGerenteController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(to bottom, #2c3e50, #000000);" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="patagonia.controller.MenuGerenteController">
    <children>
       <Label alignment="CENTER" layoutX="326.0" layoutY="49.0" prefHeight="42.0" prefWidth="269.0" style="-fx-background-color: #a5d6a7; -fx-background-radius: 10; -fx-border-radius: 10; -fx-border-color: black; -fx-border-width: 2px;" text="Menú Gerente">
          <font>
@@ -18,7 +18,7 @@
          </effect>
       </Label>
       
-      <Button fx:id="btnResumenVentas" layoutX="333.0" layoutY="142.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="255.0" style="-fx-background-color: #00d2a0; -fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-cursor: hand;" text="Resumen ventas">
+      <Button fx:id="btnResumenVentas" layoutX="333.0" layoutY="142.0" mnemonicParsing="false" onAction="#verResumenVentas" prefHeight="54.0" prefWidth="255.0" style="-fx-background-color: #00d2a0; -fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-cursor: hand;" text="Resumen ventas">
          <font>
             <Font name="Tahoma Bold" size="18.0" />
          </font>
@@ -27,7 +27,7 @@
          </effect>
       </Button>
       
-      <Button fx:id="btnProgramarViaje" ellipsisString="" layoutX="334.0" layoutY="217.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="255.0" style="-fx-background-color: #00d2a0; -fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-cursor: hand;" text="Programar viaje extraordinario" textAlignment="CENTER" wrapText="true">
+      <Button fx:id="btnProgramarViaje" ellipsisString="" layoutX="334.0" layoutY="217.0" mnemonicParsing="false" onAction="#programarEmergencia" prefHeight="54.0" prefWidth="255.0" style="-fx-background-color: #00d2a0; -fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-cursor: hand;" text="Programar viaje extraordinario" textAlignment="CENTER" wrapText="true">
          <font>
             <Font name="Tahoma Bold" size="16.0" />
          </font>
@@ -36,7 +36,7 @@
          </effect>
       </Button>
       
-      <Button fx:id="btnAutorizarDescuento" layoutX="334.0" layoutY="299.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="255.0" style="-fx-background-color: #00d2a0; -fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-cursor: hand;" text="Autorizar descuento">
+      <Button fx:id="btnAutorizarDescuento" layoutX="334.0" layoutY="299.0" mnemonicParsing="false" onAction="#autorizarDescuento" prefHeight="54.0" prefWidth="255.0" style="-fx-background-color: #00d2a0; -fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-cursor: hand;" text="Autorizar descuento">
          <font>
             <Font name="Tahoma Bold" size="18.0" />
          </font>
