--- a/src/main/resources/patagonia/view/ResumenVentas.fxml
+++ b/src/main/resources/patagonia/view/ResumenVentas.fxml
@@ -8,77 +8,58 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(to bottom, #009688, #004d40, #00251a);" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="patagonia.controller.ResumenVentasController">
+   
+   <fx:define>
+      <ToggleGroup fx:id="grupoFiltro" />
+   </fx:define>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(to bottom, #009688, #004d40, #00251a);" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="91.0" layoutY="46.0" text="Estado de Resumen de ventas diarias" textFill="WHITE">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="91.0" layoutY="155.0" text="Cantidad total de ventas " textFill="WHITE">
+      
+      <Label layoutX="91.0" layoutY="155.0" text="Cantidad total de ventas" textFill="WHITE">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Label fx:id="lblMonto" layoutX="91.0" layoutY="220.0" text="Calculando" textFill="#ffecb3">
+      
+      <Label fx:id="lblCantidad" layoutX="91.0" layoutY="190.0" text="0" textFill="#ffecb3">
          <font>
-            <Font name="System Bold" size="18.0" />
+            <Font name="System Bold" size="28.0" />
          </font>
       </Label>
-      <Label fx:id="lblMonto1" layoutX="91.0" layoutY="99.0" text="Calculando" textFill="#ffecb3">
+
+      <Label layoutX="91.0" layoutY="240.0" text="Monto Recaudado" textFill="WHITE">
          <font>
-            <Font name="System Bold" size="18.0" />
+            <Font name="System Bold" size="20.0"/>
          </font>
       </Label>
+
+      <Label fx:id="lblMonto" layoutX="91.0" layoutY="275.0" text="&#36; 0" textFill="#69f0ae">
+         <font>
+            <Font name="System Bold" size="28.0" />
+         </font>
+      </Label>
+
       <ToggleButton fx:id="btnCatamaran" layoutX="66.0" layoutY="300.0" mnemonicParsing="false" onAction="#seleccionarBarco" prefHeight="50.0" prefWidth="221.0" style="-fx-background-color: linear-gradient(#81c784, #4caf50); -fx-border-color: black; -fx-border-width: 2px; -fx-border-radius: 8; -fx-background-radius: 8;" text="Catamaran">
-         <toggleGroup>
-            <ToggleGroup fx:id="grupoBarcos" />
-         </toggleGroup>
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
+         <font><Font name="System Bold" size="14.0" /></font>
+         <cursor><Cursor fx:constant="HAND" /></cursor>
       </ToggleButton>
+
       <ToggleButton fx:id="btnFerry" layoutX="350.0" layoutY="300.0" mnemonicParsing="false" onAction="#seleccionarBarco" prefHeight="50.0" prefWidth="221.0" style="-fx-background-color: linear-gradient(#81c784, #4caf50); -fx-border-color: black; -fx-border-width: 2px; -fx-border-radius: 8; -fx-background-radius: 8;" text="Ferry">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-         <toggleGroup>
-            <ToggleGroup fx:id="grupoBarcos1" />
-         </toggleGroup>
+         <font><Font name="System Bold" size="14.0" /></font>
+         <cursor><Cursor fx:constant="HAND" /></cursor>
       </ToggleButton>
+
       <ToggleButton fx:id="btnWellboat" layoutX="623.0" layoutY="300.0" mnemonicParsing="false" onAction="#seleccionarBarco" prefHeight="50.0" prefWidth="221.0" style="-fx-background-color: linear-gradient(#81c784, #4caf50); -fx-border-color: black; -fx-border-width: 2px; -fx-border-radius: 8; -fx-background-radius: 8;" text="Wellboat">
-         <toggleGroup>
-            <ToggleGroup fx:id="grupoBarcos2" />
-         </toggleGroup>
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
+         <font><Font name="System Bold" size="14.0" /></font>
+         <cursor><Cursor fx:constant="HAND" /></cursor>
       </ToggleButton>
-      <Label fx:id="lblDestino" layoutX="150.0" layoutY="371.0" text=" .../ 20" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="18.0" />
-         </font>
-      </Label>
-      <Label fx:id="lblDestino1" layoutX="434.0" layoutY="365.0" text=".../50" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="18.0" />
-         </font>
-      </Label>
-      <Label fx:id="lblDestino2" layoutX="707.0" layoutY="365.0" text=".../80" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="18.0" />
-         </font>
-      </Label>
+
       <Button fx:id="btnSalir" layoutX="384.0" layoutY="464.0" mnemonicParsing="false" onAction="#volverInicio" prefHeight="44.0" prefWidth="153.0" style="-fx-background-color: black; -fx-text-fill: white; -fx-background-radius: 20; -fx-border-color: #2ecc71; -fx-border-radius: 20;" text="Volver">
          <font>
             <Font name="System Bold" size="12.0" />
